# isomorphic-rust

./: README.md
binaryen/: .gitignore  Cargo.toml  build.sh
binaryen/src/: lib.rs
binaryen/static/: app_loader.js
electron_percy_emscripten/: .gitignore  Cargo.toml  build_wasm.sh  package.json  test.js
electron_percy_emscripten/app/: .gitignore  app_loader.js  index.html
electron_percy_emscripten/src/: lib.rs
electron_percy_wasm/: .gitignore  build_wasm_bundle.sh  package.json
electron_percy_wasm/app/: .gitignore
electron_percy_wasm/src/: lib.rs
electron_yew_wasm/: build_wasm_bundle.sh  package.json
electron_yew_wasm/app/: app.js  electron_yew_wasm.js
electron_yew_wasm/src/: lib.rs
minimal/: Cargo.toml
minimal/src/: lib.rs
minimal/static/: app_loader.js  index.html
percy/: Cargo.toml
percy/static/: app_loader.js
percy_patched_webpack/: Cargo.toml  build.sh
percy_patched_webpack/src/: lib.rs
percy_wasm/: .gitignore  Cargo.toml  build.sh
percy_wasm/static/: app.js  app_loader.js  index.html
seed/: Cargo.toml  build.sh
seed/src/: lib.rs
seed/static/: index.html
stdweb/: Cargo.toml  build.sh  package.json  webpack.config.js
stdweb/src/: lib.rs
stdweb/static/: app_loader.js  index.html
web-view_wasm/: Cargo.toml  build.rs
web-view_wasm/app/: Cargo.toml  build.rs
web-view_wasm/app/src/: lib.rs
web-view_wasm/src/: app.wasm  main.rs
yew/: .gitignore  Cargo.toml
yew/src/: lib.rs
yew/static/: app_loader.js  index.html
